variables.Variables.scala.code
var step:Int=0
var back:Int=0
while(!isOverBaggle()){
  forward();
  ++step;
}
pickupBaggle()
while(back!=step){
  backward();
  ++back;
}
dropBaggle()